# pokedex-remastered

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
pokedex/: settings.py
