[tool.poetry]
name = "pokedex"
version = "0.1.0"
description = ""
authors = ["Zykie Rallos <zykie1018@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2"
uvicorn = "^0.30.1"
pre-commit = "^3.7.1"
django-environ = "^0.11.2"
psycopg2 = "^2.9.9"
psycopg2-binary = "^2.9.9"
setuptools = "^70.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
